Specl NEWS - User visible changes.

* Noteworthy changes in release ?.? (????-??-??) [?]

** New features:

  - `inprocess.capture` returns a `Process` object, suitable for
    matching using the `specl.shell` matchers.

** Incompatible changes:

  - `inprocess.capture` returns a `Process`, not a pair of strings
    and the call results. Call results are still available in the array
    part of the returned `Process`.

** Bug fixes:

  - Enhanced resolution timers now also work with luaposix > 31.

  - The report formatter would not display subsequent repeats of a
    context description after the first under some circumstances.  It
    now displays context descriptions correctly in that case too.

  - Don't prevent examples from loading a different luaposix than the
    installed default loaded by Specl.  This allows the luaposix specs
    to work in the build tree without priming LUA_CPATH and LUA_PATH
    before calling specl, for example.

  - `inprocess.capture` now supports capturing results of a functable
    call.

  - `specl.shell` matchers now correctly succeed when using `not_`
    prefixes to specify that a `Process` should not contain some error
    or standard output text, and that `Process` stream contains `nil`
    to indicate the stream was not written at all. For example:

      expect (capture (function () print "stdout" end)).
        not_to_contain_error "stderr"


* Noteworthy changes in release 12 (2014-04-25) [stable]

** New features:

  - Now that this API is stable, there is full documentation for
    `specl.shell` in doc/specl.md.

  - New `specl.inprocess.capture` function for running examples that
    interact with io streams.  `inprocess.capture` wraps a function call
    so that standard input calls read from the supplied buffer, and any
    output is captured rather than leaked:

      inprocess.capture (function (...)
        print (...)
        io.stderr:write (io.stdin:read "*a")
        return "first", 2
      end,